--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -5,6 +5,12 @@ html, body {
 
 }
 
+.box {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
 #mapid { height: 100%;}
    /*background-color:black;}*/
 
@@ -22,6 +28,8 @@ html, body {
 }
 
 .legend {
+    width: 2in;
+    /*height:2in;*/
     line-height: 18px;
     color: #555;
 }
@@ -35,7 +43,7 @@ html, body {
 
 #statsSelect {
     border-radius:4px;   
-    font: 16px Arial, Helvetica, sans-serif;   
+    font: 30px Arial, Helvetica, sans-serif;   
     background: white;
     background: rgba(255,255,255,0.8);  
 }
