--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -5,14 +5,9 @@ html, body {
 
 }
 
-.box {
-  display: flex;
-  flex-flow: column;
-  height: 100%;
+div#mapid {
+  width: 100%; height: 100%;
 }
-
-#mapid { height: 100%;}
-   /*background-color:black;}*/
 
 .info {
     padding: 6px 8px;
@@ -28,7 +23,7 @@ html, body {
 }
 
 .legend {
-    width: 2in;
+    /*width: 2in;*/
     /*height:2in;*/
     line-height: 18px;
     color: #555;
@@ -43,7 +38,7 @@ html, body {
 
 #statsSelect {
     border-radius:4px;   
-    font: 30px Arial, Helvetica, sans-serif;   
+    font: 16px Arial, Helvetica, sans-serif;   
     background: white;
     background: rgba(255,255,255,0.8);  
 }
