--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, main{
   height: 100%;
   margin: 0;
   padding: 0;
@@ -36,12 +36,15 @@ div#mapid {
     opacity: 0.7;
 }
 
-#statsSelect {
+#statsSelectLabel, #statsSelect, .instructionCtrl {
     border-radius:4px;   
     font: 16px Arial, Helvetica, sans-serif;   
     background: white;
     background: rgba(255,255,255,0.8);  
+    padding: 4px 4px;
+    margin: 4px;
 }
+
 
 /*select {*/
   /*margin: 50px;*/
