--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -12,7 +12,6 @@ div#mapid {
 .info {
     padding: 6px 8px;
     font: 14px/16px Arial, Helvetica, sans-serif;
-    background: white;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border-radius: 5px;
@@ -22,9 +21,8 @@ div#mapid {
     color: #777;
 }
 
-.legend {
-    /*width: 2in;*/
-    /*height:2in;*/
+/* .legend {
+
     line-height: 18px;
     color: #555;
 }
@@ -34,12 +32,30 @@ div#mapid {
     float: left;
     margin-right: 8px;
     opacity: 0.7;
+} */
+
+.legend ul{
+  list-style-type: none;
+  margin:0;
+  padding: 6px 8px;
+  border-radius: 5px;
+}
+
+.legend li {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.legend i {
+  width: 30px;
+  height: 18px;
+  margin-right: 8px;
 }
 
 #statsSelectLabel, #statsSelect, .instructionCtrl {
     border-radius:4px;   
     font: 16px Arial, Helvetica, sans-serif;   
-    background: white;
     background: rgba(255,255,255,0.8);  
     padding: 4px 4px;
     margin: 4px;
